UIUX-460: fix header button wrap on small screens

--- a/sugarcrm/styleguide/less/sugar-specific/button-groups.less
+++ b/sugarcrm/styleguide/less/sugar-specific/button-groups.less
@@ -7,7 +7,8 @@
   // Float them, remove border radius, then re-add to first and last elements
   .btn {
     position: relative;
-    float: left;
+    //float: left;
+    display: inline-block !important;
     margin-left: -1px;
     font-size: @fontSize;
     .border-radius(0px);
